# cardanostra

./: README.md  __init__.py  cardanostra.py  config.json  crud.py  extensions.json  helpers.py  manifest.json  migrations.py  models.py  nostrbot.py  pyproject.toml  tasks.py  views.py  views_api.py
bot/: __main__.py  api.py  client.py  models.py  settings.py
monstr/: encrypt.py  event.py  event_handlers.py  giftwrap.py  util.py
monstr/channels/: channel.py  persist.py
monstr/client/: client.py  event_handlers.py  messaging.py
monstr/data/: data.py
monstr/db/: db.py
monstr/event/: event.py  event_handlers.py  persist.py  persist_sqlite.py
monstr/ident/: event_handlers.py  persist.py  profile.py
monstr/settings/: handler.py  persist.py
monstr/signing/: nip46.py  signing.py
monstr/spam_handlers/: spam_handlers.py
static/js/: index.js
templates/cardanostra/: _api_docs.html  index.html
templates/nostrboltcardbot/: .env.example  _api_docs.html  index.html
