[tool.poetry]
name = "cardanostra"
version = "0.3.0"
description = "Nostr BoltCard Extension"
authors = ["Ponthief"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.8.5"
cachetools = "^5.3.1"
pycryptodome = "^3.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
