[project]
name = "cardanostra"
version = "0.3.0"
description = "Nostr BoltCard Extension"
authors = [{ name = "Ponthief" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "aiohttp>=3.8.5,<4",
    "cachetools>=5.3.1,<6",
    "pycryptodome>=3.20.0,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
