[project]
name = "cardanostra"
version = "0.3.0"
description = "Nostr BoltCard Extension"
authors = [{ name = "Ponthief" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "aiohttp>=3.12.15",
    "cachetools>=5.3.1,<6",
    "pycryptodome>=3.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
